--- a/jsframeworks/index.html
+++ b/jsframeworks/index.html
@@ -10,15 +10,14 @@
 <div id="lineDrawing"> 
 	<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 300 300" style="enable-background:new 0 0 300 300;" xml:space="preserve">
-<style type="text/css">
-	.st0{fill:#010101;}
-</style>
+
+	<g fill="none" fill-rule="evenodd" stroke="currentColor" stroke-width="1" class="lines">
 <path class="st0" d="M227.6,0.1H0v300h227.6c71.7,0,72.4-72.4,72.4-72.4V72.6C300,0.9,227.6,0.1,227.6,0.1z M252.1,117.5
 	c-7.1-12.4-20.5-20.8-35.9-20.8c-0.4,0-104.7,0-104.7,0c-8.1,0-14.7,6.6-14.7,14.7c0,8.1,6.6,14.7,14.7,14.7v0h92.3
 	c0,0,48.3,0.5,48.3,48.3v29.3c0,0-0.5,48.3-48.3,48.3H48.6v-48.3v-19.7c7.3,11.8,20.3,19.7,35.2,19.7c0.4,0,104.1,0,104.1,0
 	c0.4,0,0.7,0.1,1,0.1c8.1,0,14.7-6.6,14.7-14.7c0-8.1-6.6-14.7-14.7-14.7v-0.1H91.1c-1.5-0.2-3.2-0.5-5.1-0.9
 	c-14.2-3.2-37.5-13.6-37.5-46.8V126V96.7V48.4h48.3h106.9c0,0,48.3,0.5,48.3,48.3V117.5z"/>
-</svg> </div>
+</g></svg> </div>
 
 <script type="text/javascript" src="js/anime.js"></script>
 <script type="text/javascript">
