--- a/jsframeworks/index.html
+++ b/jsframeworks/index.html
@@ -4,6 +4,8 @@
 	<title></title>
 <style type="text/css">
 	.logo{height: 300px;}
+	.sectorC{height: 150px;}
+	.defectuosoC{height: 150px;}
 	.st0{fill:none;stroke:#000000;stroke-miterlimit:10;}
 </style>
 </head>
@@ -20,9 +22,8 @@
 			V50.4h47.3h104.8c0,0,47.3,0.5,47.3,47.3V118.1z"/>
 </g></svg> </div>
 <!-- sector -->
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Generator: Adobe Illustrator 21.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<div id="sectorA">
+<svg class="sectorC" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 700 150" style="enable-background:new 0 0 700 150;" xml:space="preserve">
 <g>
 	<path class="st0" d="M37.3,3.4c21.7,0,32.9,13,32.9,35.8v4.5H49v-5.9c0-10.2-4.1-14-11.2-14s-11.2,3.9-11.2,14
@@ -39,10 +40,10 @@
 	<path class="st0" d="M399.5,147.3c-1.2-3.7-2-5.9-2-17.5v-22.4c0-13.2-4.5-18.1-14.6-18.1h-7.7v57.9h-22.4V5.1h33.7
 		c23.2,0,33.1,10.8,33.1,32.7V49c0,14.6-4.7,24.2-14.6,28.9c11.2,4.7,14.8,15.4,14.8,30.3v22c0,6.9,0.2,12,2.4,17.3H399.5z
 		 M375.1,25.4v43.7h8.7c8.3,0,13.4-3.7,13.4-15V40c0-10.2-3.5-14.6-11.4-14.6H375.1z"/>
-</g>
-</svg>
+</g></svg></div>
 <!-- defectuoso -->
-<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<div id="defectuosoA">
+<svg class="defectuosoC" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 700 150" style="enable-background:new 0 0 700 150;" xml:space="preserve">
 <g>
 	<path class="st0" d="M5.2,5.4h35.4c22.4,0,33.3,12.4,33.3,35.2v72c0,22.8-11,35.2-33.3,35.2H5.2V5.4z M27.5,25.8v101.6h12.6
@@ -63,8 +64,7 @@
 		s11.6-3.7,11.6-13.8c0-29.3-43.7-34.8-43.7-75.4C558.5,16.8,569.6,3.8,591.4,3.8z"/>
 	<path class="st0" d="M628.2,39.6c0-22.8,12-35.8,33.9-35.8s33.9,13,33.9,35.8v74c0,22.8-12,35.8-33.9,35.8s-33.9-13-33.9-35.8V39.6
 		z M650.5,115c0,10.2,4.5,14,11.6,14s11.6-3.9,11.6-14V38.2c0-10.2-4.5-14-11.6-14s-11.6,3.9-11.6,14V115z"/>
-</g>
-</svg>
+</g></svg></div>
 <script type="text/javascript" src="js/anime.js"></script>
 <script type="text/javascript">
 	var lineDrawing = anime({
@@ -75,6 +75,24 @@
   delay: function(el, i) { return i * 250 },
   direction: 'alternate',
   loop: false
+});
+var sectorA = anime({
+targets: '#lineDrawing .lines path',
+strokeDashoffset: [anime.setDashoffset, 0],
+easing: 'easeInOutSine',
+duration: 3500,
+delay: function(el, i) { return i * 250 },
+direction: 'alternate',
+loop: false
+});
+var defectuosoA = anime({
+targets: '#lineDrawing .lines path',
+strokeDashoffset: [anime.setDashoffset, 0],
+easing: 'easeInOutSine',
+duration: 3500,
+delay: function(el, i) { return i * 250 },
+direction: 'alternate',
+loop: false
 });
 </script>
 </body>
