--- a/jsframeworks/index.html
+++ b/jsframeworks/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-<style type="text/css">
-	.logo{height: 300px;}
-	.sectorC{height: 150px;}
-	.defectuosoC{height: 150px;}
-	.st0{fill:none;stroke:#000000;stroke-miterlimit:10;}
-</style>
+	<title>JS Frameworks</title>
+	<link rel="stylesheet" href="css/master.css">
 </head>
 <body>
+	<div class="centrarlogo">
 <div id="lineDrawing">
-	<svg class="logo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	<svg class="logo relativo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 300 300" style="enable-background:new 0 0 300 300;" xml:space="preserve">
 
 	<g fill="none" fill-rule="evenodd" stroke="currentColor" stroke-width="2" class="lines">
@@ -23,9 +19,9 @@
 </g></svg> </div>
 <!-- sector -->
 <div id="sectorA">
-<svg class="sectorC" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg class="sectorC relativo" version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 700 150" style="enable-background:new 0 0 700 150;" xml:space="preserve">
-<g>
+<g fill="none" fill-rule="evenodd" stroke="currentColor" stroke-width="2" class="lines">
 	<path class="st0" d="M37.3,3.4c21.7,0,32.9,13,32.9,35.8v4.5H49v-5.9c0-10.2-4.1-14-11.2-14s-11.2,3.9-11.2,14
 		c0,29.3,43.7,34.8,43.7,75.4C70.4,136,59,149,37.1,149c-22,0-33.3-13-33.3-35.8v-8.7h21.1v10.2c0,10.2,4.5,13.8,11.6,13.8
 		S48,124.8,48,114.6C48,85.3,4.3,79.9,4.3,39.2C4.3,16.4,15.5,3.4,37.3,3.4z"/>
@@ -43,9 +39,9 @@
 </g></svg></div>
 <!-- defectuoso -->
 <div id="defectuosoA">
-<svg class="defectuosoC" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg class="defectuosoC relativo" version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 700 150" style="enable-background:new 0 0 700 150;" xml:space="preserve">
-<g>
+<g fill="none" fill-rule="evenodd" stroke="currentColor" stroke-width="2" class="lines">
 	<path class="st0" d="M5.2,5.4h35.4c22.4,0,33.3,12.4,33.3,35.2v72c0,22.8-11,35.2-33.3,35.2H5.2V5.4z M27.5,25.8v101.6h12.6
 		c7.1,0,11.4-3.7,11.4-13.8v-74c0-10.2-4.3-13.8-11.4-13.8H27.5z"/>
 	<path class="st0" d="M103.1,65.4h30.7v20.3h-30.7v41.7h38.6v20.3h-61V5.4h61v20.3h-38.6V65.4z"/>
@@ -64,7 +60,7 @@
 		s11.6-3.7,11.6-13.8c0-29.3-43.7-34.8-43.7-75.4C558.5,16.8,569.6,3.8,591.4,3.8z"/>
 	<path class="st0" d="M628.2,39.6c0-22.8,12-35.8,33.9-35.8s33.9,13,33.9,35.8v74c0,22.8-12,35.8-33.9,35.8s-33.9-13-33.9-35.8V39.6
 		z M650.5,115c0,10.2,4.5,14,11.6,14s11.6-3.9,11.6-14V38.2c0-10.2-4.5-14-11.6-14s-11.6,3.9-11.6,14V115z"/>
-</g></svg></div>
+</g></svg></div></div>
 <script type="text/javascript" src="js/anime.js"></script>
 <script type="text/javascript">
 	var lineDrawing = anime({
@@ -77,7 +73,7 @@
   loop: false
 });
 var sectorA = anime({
-targets: '#lineDrawing .lines path',
+targets: '#sectorA .lines path',
 strokeDashoffset: [anime.setDashoffset, 0],
 easing: 'easeInOutSine',
 duration: 3500,
@@ -86,7 +82,7 @@ direction: 'alternate',
 loop: false
 });
 var defectuosoA = anime({
-targets: '#lineDrawing .lines path',
+targets: '#defectuosoA .lines path',
 strokeDashoffset: [anime.setDashoffset, 0],
 easing: 'easeInOutSine',
 duration: 3500,
@@ -97,3 +93,4 @@ loop: false
 </script>
 </body>
 </html>
+
