--- a/jsframeworks/index.html
+++ b/jsframeworks/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="css/master.css">
 </head>
 <body>
-	<div onclick="destruir()" class="centrarlogo">
+	<div onclick="destruir();return false" class="centrarlogo">
 <div id="lineDrawing">
 	<svg class="logo relativo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 300 300" style="enable-background:new 0 0 300 300;" xml:space="preserve">
@@ -63,12 +63,13 @@
 </g></svg></div></div>
 <script type="text/javascript" src="js/anime.js"></script>
 <script type="text/javascript">
+// linea exterior dibujandose constantemente
 	var lineDrawing = anime({
   targets: '#lineDrawing .lines path',
   strokeDashoffset: [anime.setDashoffset, 0],
   easing: 'easeInOutSine',
   duration: 4000,
-  delay: function(el, i) { return i * 250 },
+  delay: 0,
   direction: 'alternate',
   loop: false
 });
@@ -77,7 +78,7 @@ targets: '#sectorA .lines path',
 strokeDashoffset: [anime.setDashoffset, 0],
 easing: 'easeInOutSine',
 duration: 4000,
-delay: function(el, i) { return i * 250 },
+delay: 0,
 direction: 'alternate',
 loop: true
 });
@@ -86,10 +87,11 @@ targets: '#defectuosoA .lines path',
 strokeDashoffset: [anime.setDashoffset, 0],
 easing: 'easeInOutSine',
 duration: 3500,
-delay: function(el, i) { return i * 250 },
+delay: 0,
 direction: 'alternate',
 loop: true
 });
+//destruir logo al darle click
 var destruir = function() {
   anime({
     targets: 'g',
@@ -109,12 +111,83 @@ var destruir = function() {
     easing: 'easeInOutQuart',
     direction: 'alternate',
     delay: 400,
-    complete: destruir,
-   
+
   });
 }
 
-// onClick  destruir();
+// pintar logo
+
+var logoAnimation = anime.timeline({
+  direction: 'alternate',
+  loop: true
+});
+
+logoAnimation.add([
+  {
+    targets: '.stripes path',
+    translateX: [-1000, 0],
+    opacity: {
+      value: 1,
+      duration: 100
+    },
+    fill: '#F9C100',
+    delay: (el, i) => 2200 + (i * 75),
+    duration: 400,
+    easing: 'easeOutExpo',
+    offset: 0
+  }, {
+    targets: '.katakana path',
+    d: (el) => el.getAttribute('data-d'),
+    opacity: {
+      value: [0, 1],
+      duration: 100
+    },
+    fill: '#F9C100',
+    delay: (el, i) => 2400 + (i * 120),
+    duration: 1200,
+    easing: 'easeOutCirc',
+    offset: 0
+  }, {
+    targets: '.text-fills path',
+    opacity: [0, 1],
+    fill: '#F9C100',
+    easing: 'easeOutExpo',
+    duration: 200,
+    delay: (t, i) => 3300 + (anime.random(0, 450)),
+    offset: 0
+  }, {
+    targets: '.line',
+    translateX: (target) => {
+      let x = 1200;
+      let translate;
+      if (target.classList.contains('hori')) translate = anime.random(0, 1) ? x : -x;
+      if (target.classList.contains('diag-right') || target.classList.contains('diag-left')) translate =  x / 3;
+      return [translate, 0];
+    },
+    translateY: (target) => {
+      let y = 1200;
+      let translate;
+      if (target.classList.contains('vert')) translate = anime.random(0, 1) ? y : -y;
+      if (target.classList.contains('diag-right')) translate =  -y / 3;
+      if (target.classList.contains('diag-left')) translate =  y / 3;
+      return [translate, 0];
+    },
+    scale: {
+      value: [6, 1],
+      duration: 500,
+    },
+    stroke: '#F9C100',
+    opacity: {
+      value: [0, 1],
+      duration: 100,
+    },
+    delay: (t, i) => (i * 25),
+    duration: 500,
+    easing: 'easeOutQuart',
+    offset: 0
+  }
+]);
+
 
 
 </script>
