--- a/jsframeworks/index.html
+++ b/jsframeworks/index.html
@@ -4,8 +4,9 @@
 	<title>JS Frameworks</title>
 	<link rel="stylesheet" href="css/master.css">
 </head>
-<body>
+<body><canvas id="c"></canvas>
 	<div onclick="destruir();return false" class="centrarlogo">
+<!-- Logo -->
 <div id="lineDrawing">
 	<svg class="logo relativo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 300 300" style="enable-background:new 0 0 300 300;" xml:space="preserve">
@@ -62,9 +63,7 @@
 		z M650.5,115c0,10.2,4.5,14,11.6,14s11.6-3.9,11.6-14V38.2c0-10.2-4.5-14-11.6-14s-11.6,3.9-11.6,14V115z"/>
 </g></svg></div></div>
 <script type="text/javascript" src="js/anime.js"></script>
-<script type="text/javascript" src="js/master.js">
-
-</script>
+<script type="text/javascript" src="js/master.js"></script>
 </body>
 </html>
 
