--- a/jsframeworks/index.html
+++ b/jsframeworks/index.html
@@ -5,9 +5,9 @@
 	<link rel="stylesheet" href="css/master.css">
 </head>
 <body><canvas id="c"></canvas>
-	<div onclick="destruir();return false" class="centrarlogo">
+	<div class="centrarlogo">
 <!-- Logo -->
-<div id="lineDrawing">
+<div  onclick="destruir();return false"  id="lineDrawing">
 	<svg class="logo relativo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 300 300" style="enable-background:new 0 0 300 300;" xml:space="preserve">
 
