--- a/microblog.html
+++ b/microblog.html
@@ -3,9 +3,9 @@ layout: default
 ---
 <!-- This loops through the paginated posts -->
 
-    {% for microblog in site.microblog %}
-    <article>
-      <h2>{{ microblog.title }}</h2>
-      <p>{{ microblog.content | markdownify }}</p>
-    </article>
-    {% endfor %}
+{% for microblog in site.microblog reversed %}
+<article>
+  <h2>{{ microblog.title }}</h2>
+  <p>{{ microblog.content | markdownify }}</p>
+</article>
+{% endfor %}
