updated folder structure

--- a/404.html
+++ b/404.html
@@ -16,9 +16,9 @@ layout: default
   }
 </style>
 
-<div class="container">
+<div class="contenedor center">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Página no encontrada :(</strong></p>
+  <p>La página solicitada no ha podido ser encontrada.</p>
 </div>
