--- a/tensorflow/index.html
+++ b/tensorflow/index.html
@@ -13,7 +13,7 @@
 
     <!-- Add an image that we will use to test -->
     <!-- Load index.js after the content of the page -->
-    <div class="columns is-gapless">
+    <div class="columns is-gapless is-desktop">
         <div class="column is-four-fifths">
             <video autoplay playsinline muted id="webcam" width="1800px" height="1350px"></video>
         </div>
