--- a/tensorflow/index.html
+++ b/tensorflow/index.html
@@ -13,11 +13,11 @@
 
     <!-- Add an image that we will use to test -->
     <!-- Load index.js after the content of the page -->
-    <div class="columns is-gapless is-desktop">
-        <div class="column is-four-fifths">
+    <div class="columns is-gapless">
+        <div class="column is-9">
             <video autoplay playsinline muted id="webcam" width="1800px" height="1350px"></video>
         </div>
-        <div class="column is-one-fifth">
+        <div class="column is-3">
             <section class="hero is-primary">
                 <div class="hero-body">
                     <div class="container">
@@ -33,7 +33,7 @@
             </section>
             <div class="container">
                 <div class="notification">
-                    
+
                     <div class="buttons has-addons is-fullwidth">
                         <button class="button is-large is-fullwidth" id="class-a">A</button>
                         <button class="button is-large is-fullwidth" id="class-b">B</button>
