--- a/tensorflow/index.html
+++ b/tensorflow/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <!-- Load the latest version of TensorFlow.js -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css">
     <script src="https://unpkg.com/@tensorflow/tfjs"></script>
     <script src="https://unpkg.com/@tensorflow-models/mobilenet"></script>
