Corregir tildes cartita

--- a/cartitas/2026-02-14.html
+++ b/cartitas/2026-02-14.html
@@ -86,19 +86,19 @@
 <body>
 
 <div class="cartita">
-    <h1>Querida no-se-que</h1>
+    <h1>Querida no-sé-qué</h1>
     <pre>
-    No se muy bien que escribirte, 
-    no se que decirte, 
-    no se como mostrate, 
-    no se como animarte, 
-    no se como desearte, 
-    no se como buscarte,
-    no se como encontrarte,
-    solo se estar presente y pensarte
+    No sé muy bien qué escribirte, 
+    no sé qué decirte, 
+    no sé cómo mostrate, 
+    no sé cómo animarte, 
+    no sé cómo desearte, 
+    no sé cómo buscarte,
+    no sé cómo encontrarte,
+    solo sé estar presente y pensarte
     </pre>
     <div class="firma">
-        Con cariño de tu no-se-que
+        Con cariño de tu no-sé-qué
     </div>
     <div class="meta">
         2026-02-14
